Fix #283: Use the BlacklistModal even on mobile

--- a/meteor/imports/styles/partials/_mobile.scss
+++ b/meteor/imports/styles/partials/_mobile.scss
@@ -51,7 +51,6 @@ $mobile-screen-max: 768px;
   }
 
   .well {
-    position: absolute;
     top: 0;
     left: 14px;
     right: 14px;
